gitops/apps/monitoring/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/part-of: monitoring
    ingress.kube-signal.io/public-gateway-access: "true"
