gitops/apps/monitoring/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-server-http-redirect
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-ingress
      sectionName: http-wildcard
  hostnames:
    - "grafana.${ARGOCD_ENV_base_domain}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-server
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public-gateway
      namespace: istio-ingress
      sectionName: https-wildcard
  hostnames:
    - "grafana.${ARGOCD_ENV_base_domain}"
  rules:
    - backendRefs:
        - name: grafana
          port: 80
